[package]

name = "StringTheory"
version = "0.0.1"
authors = ["HiroLord <prestonturner42@gmail.com>", "Nathan Braswell <miloignis@gmail.com>"]


[dependencies.rustnet]
git = "https://github.com/hirolord/rustnet.git"

[dependencies.sdl2]
git = "https://github.com/nukep/rust-sdl2.git"
branch = "fix/rust-nightly"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
