[package]

name = "StringTheory"
version = "0.0.1"
authors = ["Preston Turner <prestonturner42@gmail.com>", "Nathan Braswell <miloignis@gmail.com>", "Marcus Godwin <marcusgodwin@hotmail.com>"]

[dependencies]
sdl2 = "0.0.28"

[dependencies.rustnet]
git = "https://github.com/hirolord/rustnet.git"

[dependencies.gl]
git = "https://github.com/Limvot/gl-rs.git"
